@@ -8,7 +8,7 @@
 # Copyright (c) 2003 by Andreas Kupries <andreas_kupries@users.sourceforge.net>
 # All rights reserved.
 #
-# RCS: @(#) $Id: doctools.test,v 1.21 2008/04/14 01:37:35 andreas_kupries Exp $
+# RCS: @(#) $Id: doctools.test,v 1.22 2008/04/15 06:08:06 andreas_kupries Exp $
 
 # -------------------------------------------------------------------------
 
@@ -329,8 +329,8 @@ foreach format {
 
 	# Get the expected result
 	set dst [localPath [file join tests $format [file tail $src]]]
-	set map @ID@ ; lappend map \$Id\$
-	set rem \$Id\$ ; lappend rem @ID@
+	set map @ID@   ; lappend map \$Id\$ ; lappend map @USR@ $tcl_platform(user)
+	set rem \$Id\$ ; lappend rem @ID@   ; lappend $tcl_platform(user) @USR@
 	if {[catch {
 	    set expected [string map $map [fileutil::cat $dst]]
 	}]} { set expected **missing** }
@@ -348,7 +348,7 @@ foreach format {
 		set res $::errorInfo
 	    }
 	    mydoctools destroy
-	    fileutil::writeFile ${dst}.actual [string map $rem $res]
+	    #fileutil::writeFile ${dst}.actual [string map $rem $res]
 	    set res
 	} $expected
 
