@@ -3,7 +3,7 @@
 % CVS: @ID@ TEST.z
 \documentclass{article}
 \begin{document}
-\author{aku}
+\author{@USR@}
 \title{.MODULE. / TEST -- ..THE\_MODULE.. : ..THE\_TITLE..}
 \maketitle
 \section{SYNOPSIS}
