@@ -4,7 +4,7 @@
 % CVS: @ID@ BASIC.a
 \documentclass{article}
 \begin{document}
-\author{aku}
+\author{@USR@}
 \title{.MODULE. / BASIC --  : }
 \maketitle
 \section{SYNOPSIS}
